# ardulinux

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  README.md  package.json  platform.json
.github/workflows/: build.yml
boards/: ardulinux.json
builder/: main.py
builder/frameworks/: arduino.py
cores/ardulinux/: AppInfo.cpp  AppInfo.h  ArduLinuxGPIO.cpp  ArduLinuxGPIO.h  Arduino.h  ArdulinuxPrint.cpp  AsyncUDP.cpp  AsyncUDP.h  HardwareSPIStubs.cpp  I2CTypes.h  Print.h  SPIChip.h  Utility.cpp  Utility.h  WString.h  XDGDirs.cpp  XDGDirs.h  dtostrf.c  itoa.cpp  logging.cpp  logging.h  main.cpp  main_entry.cpp
cores/ardulinux/FS/: ArduLinuxFS.cpp  ArduLinuxFS.h  FS.h  FSImpl.h  vfs_api.cpp  vfs_api.h
cores/ardulinux/linux/: LinuxCommon.cpp  LinuxHardwareI2C.cpp  LinuxHardwareI2C.h  LinuxHardwareSPI.cpp  LinuxHardwareSPI.h  LinuxSerial.cpp  LinuxSerial.h  PosixFile.h  millis.cpp
cores/ardulinux/linux/gpio/: LinuxGPIOPin.cpp  LinuxGPIOPin.h
cores/ardulinux/simulated/: SimCommon.cpp  SimHardwareI2C.cpp  SimHardwareI2C.h  SimHardwareSPI.cpp
cores/meshduino/: Arduino.h  AsyncUDP.cpp  AsyncUDP.h  HardwareSPIStubs.cpp  MeshduinoGPIO.cpp  MeshduinoGPIO.h  MeshduinoPrint.cpp  SPIChip.h  Utility.cpp  Utility.h  WString.h  dtostrf.c  itoa.cpp  logging.cpp  logging.h  main.cpp
cores/meshduino/FS/: MeshduinoFS.cpp  MeshduinoFS.h
cores/meshduino/linux/: LinuxCommon.cpp  LinuxHardwareI2C.cpp  LinuxHardwareI2C.h  LinuxHardwareSPI.cpp  LinuxHardwareSPI.h  LinuxSerial.cpp  LinuxSerial.h  PosixFile.h  millis.cpp
cores/meshduino/linux/gpio/: LinuxGPIOPin.cpp  LinuxGPIOPin.h
cores/meshduino/simulated/: SimCommon.cpp  SimHardwareI2C.cpp  SimHardwareI2C.h  SimHardwareSPI.cpp
example/: README.md  platformio.ini
example/src/: test.cpp
libraries/Wire/src/: Wire.h
tests/: gpio.cpp  run.sh
tests/unit/: CMakeLists.txt  test_app_info.cpp  test_fs.cpp  test_gpio.cpp  test_itoa.cpp  test_linux_common.cpp  test_linux_i2c.cpp  test_linux_spi.cpp  test_logging.cpp  test_millis.cpp  test_printf.cpp  test_serial.cpp  test_sim_i2c.cpp  test_sim_serial.cpp  test_spi.cpp  test_spi_stubs.cpp  test_utility.cpp  test_vfs.cpp  test_xdg_dirs.cpp
